--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         video: {
           width: 1280,
           height: 720,
-          facingMode: "environment",
+          facingMode: "user",
         }
       }
 
